--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 bot.name=LarionowBot
-bot.key=6118429126:AAHkvB6s3e8D1IQFgHeLssnbTWdjLDaj-yQ
+bot.token=6118429126:AAHkvB6s3e8D1IQFgHeLssnbTWdjLDaj-yQ
