--- a/src/main/resources/string.properties
+++ b/src/main/resources/string.properties
@@ -1,4 +1,4 @@
-message.tgref = Telegram: https://t.me/larionowmeow.
-message.vkref = VK: https://vk.com/nenavizhu.vasvsekh.
+message.tg = Telegram: https://t.me/larionowmeow.
+message.vk = VK: https://vk.com/nenavizhu.vasvsekh.
 message.github = GitHub: https://github.com/Mihail-Larionow
 message.code = GitHub: https://github.com/Mihail-Larionow/MichelBot
