--- a/src/main/resources/string.properties
+++ b/src/main/resources/string.properties
@@ -1,4 +1,4 @@
-message.tg = https://t.me/larionowmeow.
-message.vk = https://vk.com/nenavizhu.vasvsekh.
+message.tg = https://t.me/larionowmeow
+message.vk = https://vk.com/nenavizhu.vasvsekh
 message.github = https://github.com/Mihail-Larionow
 message.code = https://github.com/Mihail-Larionow/MichelBot
