Some features update

--- a/src/main/resources/string.properties
+++ b/src/main/resources/string.properties
@@ -2,3 +2,8 @@ message.tg = https://t.me/larionowmeow
 message.vk = https://vk.com/nenavizhu.vasvsekh
 message.github = https://github.com/Mihail-Larionow
 message.code = https://github.com/Mihail-Larionow/MichelBot
+
+message.dictophone = https://github.com/Mihail-Larionow/Dictophone
+message.friendsMap = https://github.com/Mihail-Larionow/Friends-Map
+message.rubiksCube = https://github.com/Mihail-Larionow/Rubik-s-cube
+message.weatherIt = https://github.com/Mihail-Larionow/WeatherIt
