--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 
+		<dependency>
+		<groupId>org.jsoup</groupId>
+		<artifactId>jsoup</artifactId>
+		<version>1.15.3</version>
+		</dependency>
 
 	</dependencies>
 
